--- a/websitefrontend/package.json
+++ b/websitefrontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -37,7 +38,7 @@
     ]
   },
   "devDependencies": {
-    "daisyui": "^4.12.2",
+    "daisyui": "^4.12.24",
     "tailwindcss": "^3.4.4"
   }
 }
